Fix call to action text alignment

--- a/src/TeamTavern/Client/Components/Landing.scss
+++ b/src/TeamTavern/Client/Components/Landing.scss
@@ -77,6 +77,7 @@
     padding: 18px;
     width: fit-content;
     width: -moz-fit-content;
+    text-align: center;
 }
 
 .landing-section-image {
